# PassKeeper

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  README_KO.md  SECURITY.md  TUTORIAL.md  package-lock.json  package.json
src/: index.html  keeper.css  keeper.html  login.css  main.js  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  windows-manifest.xml
src-tauri/src/: crypto.rs  lib.rs  main.rs  password.rs  storage.rs
src-tauri/src/common/: Cargo.toml
src-tauri/src/common/src/: define.rs  lib.rs
src-tauri/src/module/: crypto.rs  debug.rs  mod.rs  registry.rs
