[package]
name = "passkeeper"
version = "1.0.0"
description = "Manager for passwords"
authors = ["Kwangsoo Seo", "monoslab <chps74@naver.com>"]
edition = "2021"
# Get rust version : rustc --version
rust-version = "1.90.0"
build = "build.rs"
license = "Copyright (C) 2025 Monoslab. All rights reserved."
readme = "README_KO.md"

[package.metadata.tauri-winres]
OriginalFilename = "PassKeeper.exe"
LegalCopyright = "Copyright (C) 2025 Monoslab. All rights reserved."
FileDescription = "Manager for passwords"
ProductName = "passkeeper"
CompanyName = "Monoslab"
ProductVersion = "1.0.0"
FileVersion = "1.0.0"
Comments = "passkeeper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "passkeeper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[target.'cfg(windows)'.build-dependencies]
tauri-winres = "0.3.5"

[dependencies]
tauri = { version = "2.9", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.21.3"
# Below are dependencies for encryption/decryption and hashing
# For AES encryption
#aes = "0.8.4"
#cbc = "0.1.2"
#block-padding = "0.4.2"
# For SHA256 hashing
#sha2 = "0.10.9"
# Hexadecimal literal support
#hex = "0.4.3"
#hex-literal = "1.1.0"
# Base64 encoding/decoding
base64 = "0.22.1"
common = { version = "1.0.0", path = "src/common" }

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mobile)'] }

[workspace]
members = [ "src/common" ]